out/base/0-express-backend-namespace.yaml
#! 0-express-backend-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: express-backend
    labels:
        com.docker.compose.project: express-backend
