out/base/api-deployment.yaml
#! api-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: express-backend
  labels:
    com.docker.compose.project: express-backend
    com.docker.compose.service: api
spec:
  replicas: 1
  selector:
    matchLabels:
      com.docker.compose.project: express-backend
      com.docker.compose.service: api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        com.docker.compose.project: express-backend
        com.docker.compose.service: api
        com.docker.compose.network.default: "true"
    spec:
      containers:
        - name: api
          image: express-backend-api
          imagePullPolicy: IfNotPresent
          command: ["yarn", "docker:start"]
          ports:
            - name: api-3000
              containerPort: 3000
