out/base/mongodb-deployment.yaml
#! mongodb-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongodb
    namespace: express-backend
    labels:
        com.docker.compose.project: express-backend
        com.docker.compose.service: mongodb
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: express-backend
            com.docker.compose.service: mongodb
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: express-backend
                com.docker.compose.service: mongodb
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: mongodb
                  image: mongo
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: mongodb-27017
                      containerPort: 27017
                  volumeMounts:
                    - name: data-db
                      mountPath: /data/db
            volumes:
                - name: data-db
                  persistentVolumeClaim:
                    claimName: mongodb-mongo-db
