out/base/api-service.yaml
# check if there is at least one published port

#! api-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
  name: api-published
  namespace: express-backend
  labels:
    com.docker.compose.project: express-backend
    com.docker.compose.service: api
spec:
  type: NodePort
  selector:
    com.docker.compose.project: express-backend
    com.docker.compose.service: api
  ports:
    - name: api-3000
      port: 3000 # Cluster IP port
      targetPort: api-3000 # Container port (in Deployment)

      nodePort: 30080 # Host port (must match kind config)

      protocol: TCP
# check if there is at least one published port
