out/base/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: api-ingress
  namespace: express-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: express.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
